--- a/themes/toha/static/css/sections/home.css
+++ b/themes/toha/static/css/sections/home.css
@@ -38,6 +38,8 @@
 }
 
 .home img {
+  object-fit: 'cover';
+  object-position: 'top';
   width: 148px;
   height: 148px;
   background-color: #e7e7ef;
